# fyxvo-platform

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.verify-build  README.md  SECURITY.md  compose.verify-build.yaml  package.json  pnpm-lock.yaml  security.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.devnet-governed.example  .env.example
apps/api/src/: app.ts  blockchain.ts  repository.ts  types.ts
apps/api/test/: app.test.ts
apps/gateway/: .env.devnet-governed.example  .env.example
apps/gateway/src/: app.ts  pricing.ts  repository.ts  state.ts  types.ts
apps/gateway/test/: app.test.ts
apps/web/: .env.example  next.config.ts  package.json  proxy.ts  tsconfig.json  vercel.json
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: address-link.tsx  (+70 more)
apps/worker/: .env.devnet-governed.example  Dockerfile  package.json
docs/: MAINNET_ENV_TEMPLATE.md  MAINNET_RUNBOOK.md  OPERATIONS.md  SECRETS_AND_KEYS.md  authority-migration.md  deployment.md  governed-devnet-redeployment.md  governed-devnet-staging.md  incident-response.md  launch-assets.md  launch-readiness.md  mainnet-readiness.md  private-alpha.md  production-rollout-checklist.md  program-metadata.md  protocol-design.md  support-guide.md
programs/fyxvo/: Cargo.toml
programs/fyxvo/src/: lib.rs
scripts/: bootstrap.sh  verify-mainnet-readiness.ts  verify-production.ts
scripts/solana/: plan-governed-deployment.ts  run-live-sol-flow.ts
(+133 files in other folders)
